# nback_app

./: .gitignore  app.py  pyproject.toml
static/css/: style.css
static/js/: script.js
templates/: index.html  result.html  task.html
